@@ -7,16 +7,19 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
-import pl.infoshare.clinicweb.doctor.Doctor;
-import pl.infoshare.clinicweb.doctor.DoctorDto;
-import pl.infoshare.clinicweb.doctor.DoctorMapper;
-import pl.infoshare.clinicweb.doctor.DoctorService;
+import pl.infoshare.clinicweb.doctor.*;
+import pl.infoshare.clinicweb.exception.validation.TimeSlotUnavailableException;
 import pl.infoshare.clinicweb.patient.Patient;
 import pl.infoshare.clinicweb.patient.PatientDto;
 import pl.infoshare.clinicweb.patient.PatientMapper;
 import pl.infoshare.clinicweb.patient.PatientService;
+
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
+import java.time.temporal.TemporalAdjusters;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -30,9 +33,10 @@ public class VisitService {
     private final DoctorMapper doctorMapper;
     private final PatientMapper patientMapper;
 
-    public void saveVisit(Visit visit, Long doctorId, Long patientId) {
-        if (doctorId == null || patientId == null) {
-            throw new IllegalArgumentException("Doctor ID and Patient ID cannot be null");
+    public void saveVisit(Visit visit, Long doctorId, Long patientId, LocalDateTime visitTime) {
+        if (isTimeSlotAvailable(doctorId, visitTime)) {
+            throw new TimeSlotUnavailableException(visitTime);
+
         }
 
         DoctorDto doctor = doctorService.findById(doctorId);
@@ -44,8 +48,7 @@ public class VisitService {
 
         visit.setDoctor(entityDoctor);
         visit.setPatient(entityPatient);
-
-
+        visit.setVisitTime(visitTime);
         visitRepository.save(visit);
     }
 
@@ -62,14 +65,14 @@ public class VisitService {
         return visitRepository.findAll()
                 .stream()
                 .map(visitMapper::toVisitDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Page<VisitDto> findPage(int pageNumber) {
 
         final int pageSize = 10;
 
-        Pageable pageable = PageRequest.of(pageNumber - 1, pageSize, Sort.by("id"));
+        Pageable pageable = PageRequest.of(pageNumber - 1, pageSize, Sort.by(Sort.Direction.DESC, "visitDate"));
         Page<Visit> entities = visitRepository.findAll(pageable);
 
         Page<VisitDto> visits = entities.map(visit -> {
@@ -91,6 +94,7 @@ public class VisitService {
 
             visitRepository.save(visit);
         }
+
     }
 
     public void deleteVisit(Visit visit) {
@@ -113,4 +117,46 @@ public class VisitService {
                 .orElseThrow(() ->
                         new EntityNotFoundException(String.format("Visit not found with given ID: %d", id)));
     }
+
+    static List<LocalDateTime> generateAvailableTimes() {
+        List<LocalDateTime> availableTimes = new ArrayList<>();
+        LocalDateTime now = LocalDateTime.now().truncatedTo(ChronoUnit.HOURS).plusMinutes(30);
+
+        LocalDate startDay = now.toLocalDate();
+        LocalDate endOfMonth = now.with(TemporalAdjusters.lastDayOfMonth()).toLocalDate();
+
+        for (LocalDate current = startDay; !current.isAfter(endOfMonth); current = current.plusDays(1)) {
+            LocalDateTime startTime;
+            LocalDateTime endTime = current.atTime(18, 0);
+
+            if (current.isEqual(now.toLocalDate())) {
+                startTime = now.isBefore(current.atTime(8, 0)) ? current.atTime(8, 0) : now.plusMinutes(30);
+            } else {
+                startTime = current.atTime(8, 0);
+            }
+
+            while (startTime.isBefore(endTime)) {
+                availableTimes.add(startTime);
+                startTime = startTime.plusMinutes(30);
+            }
+        }
+
+        return availableTimes;
+    }
+
+    public boolean isTimeSlotAvailable(Long doctorId, LocalDateTime visitTime) {
+        LocalDateTime endTime = calculateEndTime(visitTime);
+        return !areVisitsAvailable(doctorId, visitTime, endTime);
+    }
+
+    private LocalDateTime calculateEndTime(LocalDateTime visitTime) {
+        return visitTime.plusMinutes(30);
+    }
+
+    private boolean areVisitsAvailable(long id, LocalDateTime startTime, LocalDateTime endTime) {
+        int countVisit = visitRepository.findByDoctorAndVisitTimeBetween(id, startTime, endTime);
+        return countVisit < 1;
+
+    }
+
 }
